# utils

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
dtapply/: CMakeLists.txt  README.md  dtapply
dtapply/examples/: config-basic.txt  config-overlay-context.txt  config-sections.txt
dtmerge/: CMakeLists.txt  README.md  dtmerge.1  dtmerge.c  dtoverlay.2  dtoverlay.c  dtoverlay.h  dtoverlay_main.c  dtparam.1  utils.c  utils.h
eeptools/: CMakeLists.txt  README.md  eepdump.c  eepflash.sh  eeplib.c  eeplib.h  eepmake.c  eeprom_settings.txt
kdtc/: CMakeLists.txt  README.md  kdtc
otamaker/: CMakeLists.txt  README.md  otamaker
otpset/: CMakeLists.txt  README.md  otpset
overlaycheck/: CMakeLists.txt  README.md  overlaycheck  overlaycheck_exclusions.txt
ovmerge/: CMakeLists.txt  README.md  ovmerge
pinctrl/: CMakeLists.txt  README.md  gpiochip.h  gpiochip_bcm2712.c  gpiochip_bcm2835.c  gpiochip_firmware.c  gpiochip_rp1.c  gpiolib.c  gpiolib.md  library_gpiochips.c  pinctrl-completion.bash  pinctrl.c  util.c  util.h
piolib/: CMakeLists.txt  README.md  dpi_interlace.c  library_piochips.c  pio_platform.h  pio_rp1.c  piolib.c  piolib.h  piolib_priv.h  pwm.c  rp1_pio_if.h
piolib/examples/: CMakeLists.txt  apitest.c  dpi_csync.c  echo.pio.h  genseq.c  genseq.pio.h  piotest.c  quadrature_encoder.c  quadrature_encoder.pio.h  rp1sm.c  ws2812.c  ws2812.pio.h
piolib/hardware/: gpio.h  pio.h  pio_instructions.h
piolib/include/: pio_platform.h  piolib.h  piolib_priv.h  rp1_pio_if.h
piolib/include/hardware/: clocks.h  gpio.h  pio.h  timer.h
piolib/include/hardware/regs/: proc_pio.h
piolib/pico/: stdlib.h
raspinfo/: .gitignore  CMakeLists.txt  README.md  raspinfo  raspinfo.in
rpi-gpu-usage/: CMakeLists.txt  README.md  rpi-gpu-usage-completion.bash  rpi-gpu-usage.1  rpi-gpu-usage.c
rpieepromab/: CMakeLists.txt  README.md  main.c  rpieepromab.c  rpieepromab.h
rpierrorlog/: CMakeLists.txt  README.md  main.c  rpierrorlog.c  rpierrorlog.h
rpifwcrypto/: CMakeLists.txt  README.md  main.c  rpifwcrypto.c  rpifwcrypto.h
scripts/: gpu_usage.py
vcgencmd/: CMakeLists.txt  vcgencmd-completion.bash  vcgencmd.1  vcgencmd.c
vclog/: CMakeLists.txt  README.md  vcdbg.c  vclog.c
vcmailbox/: CMakeLists.txt  raspirev.7  vcmailbox.7  vcmailbox.c
